--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cliente",
+  "name": "client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -14,8 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.24.1",
-    "sass": "^1.77.6",
-    "scss": "^0.2.4"
+    "sass": "^1.77.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
